Fixed h1 size on mobile

--- a/CorseraPortfolio/dark-styles.css
+++ b/CorseraPortfolio/dark-styles.css
@@ -305,6 +305,11 @@ h1 {
     nav ul li {
         margin: 10px 0;
     }
+
+    h1{
+
+        font-size: 1.5em;
+    }
 }
 
 @media (min-width: 769px) {
